[gd_scene load_steps=9 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://assets/level1.png" type="Texture" id=2]
[ext_resource path="res://SpawnStart.tscn" type="PackedScene" id=3]
[ext_resource path="res://PathFinish.tscn" type="PackedScene" id=4]
[ext_resource path="res://PathWaypoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://turret.tscn" type="PackedScene" id=6]
[ext_resource path="res://DefaultTileset.tres" type="TileSet" id=7]
[ext_resource path="res://TileMap.gd" type="Script" id=8]

[node name="game" type="Node2D"]

script = ExtResource( 1 )

[node name="LevelBackdrop" type="Sprite" parent="." index="0"]

position = Vector2( 521.96, 321.321 )
scale = Vector2( 1.79715, 1.79716 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnStart" parent="LevelBackdrop" index="0" instance=ExtResource( 3 )]

position = Vector2( -273.785, 18.7719 )

[node name="PathFinish" parent="LevelBackdrop" index="1" instance=ExtResource( 4 )]

position = Vector2( 267.964, -18.9239 )

[node name="PathWaypoint" parent="LevelBackdrop" index="2" instance=ExtResource( 5 )]

position = Vector2( -21.1446, 139.108 )

[node name="BlueTurret" parent="." index="1" instance=ExtResource( 6 )]

position = Vector2( 453.757, 351.321 )
scale = Vector2( 0.898575, 0.89858 )
color = Color( 0, 0, 0.509804, 1 )

[node name="RedTurret" parent="." index="2" instance=ExtResource( 6 )]

position = Vector2( 236.716, 180.839 )
scale = Vector2( 0.898575, 0.89858 )
color = Color( 0.509804, 0, 0, 1 )

[node name="GreenTurret" parent="." index="3" instance=ExtResource( 6 )]

position = Vector2( 756.756, 208.775 )
scale = Vector2( 0.898575, 0.89858 )
color = Color( 0, 0.509804, 0, 1 )

[node name="NavMap" type="TileMap" parent="." index="4"]

visible = false
mode = 0
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 327684, 0, 0, 327685, 0, 0, 327691, 0, 0, 327692, 0, 0, 393220, 0, 0, 393221, 0, 0, 393227, 0, 0, 393228, 0, 0, 458756, 0, 0, 458757, 0, 0, 458763, 0, 0, 458764, 0, 0, 524292, 0, 0, 524293, 0, 0, 524299, 0, 0, 524300, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 589828, 0, 0, 589829, 0, 0, 589835, 0, 0, 589836, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655371, 0, 0, 655372, 0, 0, 655380, 0, 0, 655381, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720907, 0, 0, 720908, 0, 0, 720916, 0, 0, 720917, 0, 0, 786436, 0, 0, 786437, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 851972, 0, 0, 851973, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 917508, 0, 0, 917509, 0, 0, 917528, 0, 0, 917529, 0, 0, 983044, 0, 0, 983045, 0, 0, 983064, 0, 0, 983065, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0 )
script = ExtResource( 8 )
_sections_unfolded = [ "Cell", "Collision", "Visibility" ]
map_size = Vector2( 33, 22 )

[node name="WaveTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]


